Update and rename Login HTML to Login.html

--- a/Login.html
+++ b/Login.html
@@ -20,8 +20,8 @@
 
             <input type="submit" value="Login"><br><br>
 
-            <a href="https://www.corinthians.com.br/">Ainda não tem conta?</a><br><br>
-            <a href="https://www.fcbarcelona.com/en/">Esqueceu a senha?</a>
+            <a href=" ">Ainda não tem conta?</a><br><br>
+            <a href=" ">Esqueceu a senha?</a>
 
         </fieldset>
     </form>
